test/asm/lexer-hack.err
error: `Label1` is not a macro
    at lexer-hack.asm(22)
error: `mac` already defined
    at lexer-hack.asm(24)
    and also:
    at lexer-hack.asm(1)
error: Undefined macro `undef` (did you mean a label "undef:"?)
    at lexer-hack.asm(27)
error: Undefined macro `undef` (did you mean a label "undef::"?)
    at lexer-hack.asm(28)
Assembly aborted with 4 errors!
